<resources>
    <string name="app_name">EYEAM</string>
    <string name="title_home">Home</string>
    <string name="title_camerax">Camera</string>
    <string name="title_profile">Profile</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="username">Username</string>
    <string name="search">Search Animal Here...</string>
    <string name="gambar_cari">gambar cari</string>
    <string name="popular_animal">Popular Animal</string>
    <string name="news">Animal News</string>
    <string name="image_news">Image News</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="cameraX">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="unggah">Go!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="do_you_have_an_account">Already Have an Account?\t\t</string>
    <string name="sign_up">Sign Up!</string>
    <string name="registration">Register</string>
    <string name="your_profile">Profile</string>
    <string name="me">Me</string>
    <string name="language">Language</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="history">History</string>
    <string name="logout">Logout</string>
    <string name="about_us">About Us</string>
    <string name="nama_populer">Nama Populer</string>
    <string name="nama_ilmiah">Nama Ilmiah</string>
    <string name="image_of_species">Image of Species</string>
    <string name="taxonomy">Taxonomy</string>
    <string name="kingdom">Kingdom</string>
    <string name="phylum">Phylum</string>
    <string name="genus">Genus</string>
    <string name="klas">Class</string>
    <string name="order">Order</string>
    <string name="family">Family</string>
    <string name="deskripsi">Description</string>
    <string name="isi_deskripsi">Isi</string>
    <string name="persebaran">Persebaran</string>
    <string name="isi_persebaran">Isi</string>
    <string name="habitat">Habitat</string>
    <string name="isi_habitat">Isi</string>
    <string name="isi_conserv">Isi</string>
    <string name="conserv">Conservation Action</string>
    <string name="threats">Threats</string>
    <string name="isi_threats">Isi</string>
    <string name="population">Population</string>
    <string name="isi_population">Isi</string>
    <string name="iucn_stats">IUCN Stats</string>
    <string name="isi_iucn">Isi</string>
    <string name="confirm_pass">Password Confirmation</string>
    <string name="already_have_an_account">Have an Account?</string>
</resources>